charon/tests/ui/associated_types/issue-1260-self-ref-assoc-const.rs
//@ charon-args=--lift-associated-types=*

trait Ring {
    type Sub: Field;
    const ZERO: Self;
}

trait Field: Ring {
    type Packing;
}

fn zero<R: Ring>() {
    let _ = R::Sub::ZERO;
}
